Code review and include Employee.class, JobFunctions enum and AuditListener.class